import com.github.spotbugs.snom.Confidence
import com.github.spotbugs.snom.Effort
import com.github.spotbugs.snom.SpotBugsTask

plugins {
    id 'base'   // root is just a container, no jar
    id 'com.github.spotbugs' version '6.2.5' apply false
    id("io.freefair.lombok") version "9.5.0" apply false
}

subprojects {
    group = 'dev.stemcraft'
    version = "1.0.0-SNAPSHOT"

    apply plugin: "io.freefair.lombok"

    repositories {
        mavenCentral()
        maven {
            name = "papermc-repo"
            url = "https://repo.papermc.io/repository/maven-public/"
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs += ["-Xlint:all", "-Xlint:-processing", "-proc:full"]
    }

    plugins.withId("java") {
        apply plugin: "com.github.spotbugs"

        java {
            toolchain.languageVersion = JavaLanguageVersion.of(25)
        }

        tasks.withType(JavaCompile).configureEach {
            options.encoding = 'UTF-8'
        }

        spotbugs {
            effort = Effort.valueOf('MAX')
            reportLevel = Confidence.valueOf('HIGH')
            ignoreFailures = false
        }

        tasks.configureEach { task ->
            if (task instanceof SpotBugsTask) {
                SpotBugsTask spotBugsTask = task
                spotBugsTask.reports.maybeCreate("html").required.set(true)
                spotBugsTask.reports.maybeCreate("xml").required.set(true)
            }
        }

        tasks.named("spotbugsTest") {
            enabled = false
        }

        tasks.named("check") {
            dependsOn(tasks.named("spotbugsMain"))
        }
    }
}
